<resources>
    <string name="app_name">WiQTT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">No broker chosen...</string>
    <string name="nav_header_subtitle"></string>

    <string name="nav_broker_menu_title">Brokers</string>
    <string name="nav_app_menu_title">Application</string>

    <string name="action_settings">Settings</string>

    <string name="nav_add_broker">Add broker</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="broker_name_hint">Name</string>
    <string name="broker_host_hint">Host</string>
    <string name="broker_port_hint">Port</string>

    <string name="broker_default_port">1883</string>

    <string name="message_name_hint">Name</string>
    <string name="message_topic_hint">Topic</string>
    <string name="message_payload_hint">Payload</string>

    <string name="broker_intent_extra">BROKER_OBJECT</string>
    <string name="message_intent_extra">MESSAGE_OBJECT</string>
</resources>
