<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:id="@+id/nav_broker_menu"
          android:title="@string/nav_broker_menu_title">
        <menu>
            <group android:id="@+id/nav_broker_group"
                   android:orderInCategory="101">
            </group>
        </menu>
        <group>
            <item android:id="@+id/nav_add_broker"
                  android:icon="@drawable/ic_menu_share"
                  android:title="@string/nav_add_broker"/>
        </group>
    </item>


    <item android:title="@string/nav_app_menu_title">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/nav_settings"/>
            <item
                    android:id="@+id/nav_about"
                    android:title="@string/nav_about"/>
        </menu>
    </item>

</menu>
