<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BrokerCreationActivity">

    <EditText
            android:id="@+id/broker_name_input"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/broker_name_hint"/>

    <EditText
            android:id="@+id/broker_host_input"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/broker_name_input"
            android:hint="@string/broker_host_hint"/>

    <EditText
            android:id="@+id/broker_port_input"
            android:inputType="number|numberDecimal"
            android:digits="0123456789"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/broker_host_input"
            android:hint="@string/broker_port_hint"
            android:text="@string/broker_default_port"/>

    <Spinner
            android:id="@+id/broker_protocol_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/broker_port_input"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/broker_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>