<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MessageCreationActivity">

    <EditText
            android:id="@+id/message_name_input"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/message_name_hint"/>

    <EditText
            android:id="@+id/message_topic_input"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/message_name_input"
            android:hint="@string/message_topic_hint"/>

    <EditText
            android:id="@+id/message_payload_input"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/message_topic_input"
            android:hint="@string/message_payload_hint"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/message_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>